// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewTable::Header default view displays 1`] = `
<div
  className="component"
>
  <div
    className="d-flex flex-grow"
  >
    <div
      className="d-flex flex-grow mr-2"
    >
      <div
        className="title mr-2 h-100 cursor-pointer"
        color="transparent"
        id="settings-view-button"
        onClick={[Function]}
      >
        New & Open Tickets
        <i
          className="material-icons"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div
      className="d-flex"
    >
      <Search
        bindKey={true}
        className="mr-2"
        disabled={false}
        forcedQuery=""
        location="7false"
        onChange={[Function]}
        placeholder="Search tickets..."
        searchDebounceTime={400}
        style={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`ViewTable::Header empty view 1`] = `
<div
  className="component"
>
  <div
    className="d-flex flex-grow"
  >
    <div
      className="d-flex flex-grow mr-2"
    >
      <div
        className="title mr-2 h-100 cursor-pointer"
        color="transparent"
        id="settings-view-button"
        onClick={[Function]}
      >
        <i
          className="material-icons"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div
      className="d-flex"
    >
      <Search
        bindKey={true}
        className="mr-2"
        disabled={false}
        forcedQuery=""
        location="undefinedfalse"
        onChange={[Function]}
        placeholder="Search tickets..."
        searchDebounceTime={400}
        style={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`ViewTable::Header search view 1`] = `
<div
  className="component"
>
  <div
    className="d-flex flex-grow"
  >
    <div
      className="d-flex flex-grow mr-2"
    >
      <Link
        className="btn btn-secondary mr-2"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/app/tickets"
      >
        <i
          className="material-icons mr-2"
        >
          arrow_back
        </i>
        Back
      </Link>
      <EditableTitle
        className="title flex-grow"
        disabled={true}
        forceEditMode={true}
        placeholder="View name"
        select={false}
        size="xl"
        style={Object {}}
        title="New & Open Tickets"
        update={[Function]}
      />
    </div>
    <div
      className="d-flex"
    >
      <Search
        bindKey={true}
        className="mr-2"
        disabled={false}
        forcedQuery="term1"
        location="7(s)"
        onChange={[Function]}
        placeholder="Search tickets..."
        searchDebounceTime={400}
        style={Object {}}
      />
    </div>
  </div>
</div>
`;
